--- a/gen_decorate/decorate.conf
+++ b/gen_decorate/decorate.conf
@@ -1,3 +1,23 @@
+Slot1 = [
+  {
+    Item {
+      Count = 1
+      ItemType = "minecraft:stained_glass_pane"
+      UnsafeDamage = 1
+      DisplayName = ""
+    }
+    Requirements = "tick % 40 <= 20"
+  }
+  {
+    Item {
+      Count = 1
+      ItemType = "minecraft:stained_glass_pane"
+      UnsafeDamage = 2
+      DisplayName = ""
+    }
+    Requirements = "tick % 40 > 20"
+  }
+]
 Slot3 = [
   {
     Item {
@@ -6,7 +26,7 @@ Slot3 = [
       UnsafeDamage = 1
       DisplayName = ""
     }
-    Requirements = "tick % 20 <= 10"
+    Requirements = "tick % 40 <= 20"
   }
   {
     Item {
@@ -15,10 +35,10 @@ Slot3 = [
       UnsafeDamage = 2
       DisplayName = ""
     }
-    Requirements = "tick % 20 > 10"
+    Requirements = "tick % 40 > 20"
   }
 ]
-Slot4 = [
+Slot44 = [
   {
     Item {
       Count = 1
@@ -26,7 +46,7 @@ Slot4 = [
       UnsafeDamage = 1
       DisplayName = ""
     }
-    Requirements = "tick % 20 <= 10"
+    Requirements = "tick % 40 <= 20"
   }
   {
     Item {
@@ -35,10 +55,10 @@ Slot4 = [
       UnsafeDamage = 2
       DisplayName = ""
     }
-    Requirements = "tick % 20 > 10"
+    Requirements = "tick % 40 > 20"
   }
 ]
-Slot5 = [
+Slot32 = [
   {
     Item {
       Count = 1
@@ -46,7 +66,7 @@ Slot5 = [
       UnsafeDamage = 1
       DisplayName = ""
     }
-    Requirements = "tick % 20 <= 10"
+    Requirements = "tick % 40 <= 20"
   }
   {
     Item {
@@ -55,6 +75,6 @@ Slot5 = [
       UnsafeDamage = 2
       DisplayName = ""
     }
-    Requirements = "tick % 20 > 10"
+    Requirements = "tick % 40 > 20"
   }
 ]
