--- a/shops/test.conf
+++ b/shops/test.conf
@@ -10,25 +10,57 @@ virtualchest {
         UnsafeDamage = 2
         Count = 1
         ItemLore = [
-          "&a&l收购"
-          "&b左键点击一次出售 &e1 &b个"
-          "&b左键Shift点击一次出售 &e64 &b个"
+          "&a出售"
+          "&b左键点击一次购买 &e1 &b个"
+          "&b左键Shift点击一次购买 &e64 &b个"
           "&6价格：&d5.0&a金币&d一个"
+          "&2-&d-&e-&c-&b-&6-&2-&d-&e-&c-&b-&6-&2-&d-&e-&c-&b-&6-"
+          "&d收购"
+          "&b右键点击一次出售 &e1 &b个"
+          "&b右键Shift点击批量出售"
+          "&6价格：&d1.0&a金币&d一个"
         ]
       }
       PrimaryAction {
-        Command = """cost-item:1;
-                       cost: totaleconomy:dollar:-5.0;
+        Command = """cost: totaleconomy:dollar:5.0;
+                       console: give %player_name% minecraft:wool 1 2;
                        sound: minecraft:block.note.hat"""
         CommandAfter = "console: vc update test %player%"
         KeepInventoryOpen = true
       }
       PrimaryShiftAction {
-        Command = """cost-item:64;
-                       cost: totaleconomy:dollar:-320.0;
+        Command = """cost: totaleconomy:dollar:320.0;
+                       console: give %player_name% minecraft:wool 64 2;
                        sound: minecraft:block.note.hat"""
         CommandAfter = "console: vc update test %player%"
         KeepInventoryOpen = true
+      }
+      SecondaryAction {
+        Command = """cost-item:1;
+                       cost: totaleconomy:dollar:-1.0;
+                       sound: minecraft:block.note.hat"""
+        CommandAfter = "console: vc update test %player%"
+        KeepInventoryOpen = true
+        HandheldItem {
+          SearchInventory = true
+          ItemType = "minecraft:wool"
+          Count = 1
+          UnsafeDamage = 2
+        }
+      }
+      SecondaryShiftAction {
+        Command = """cost-item:9;
+                       cost: totaleconomy:dollar:-9.0;
+                       sound: minecraft:block.note.hat"""
+        CommandAfter = "console: vc update test %player%"
+        KeepInventoryOpen = true
+        HandheldItem {
+          RepetitionUpperLimit = 256
+          SearchInventory = true
+          ItemType = "minecraft:wool"
+          Count = 9
+          UnsafeDamage = 2
+        }
       }
     }
   ]
@@ -39,25 +71,57 @@ virtualchest {
         UnsafeDamage = 2
         Count = 1
         ItemLore = [
-          "&a&l收购"
-          "&b左键点击一次出售 &e1 &b个"
-          "&b左键Shift点击一次出售 &e64 &b个"
+          "&a出售"
+          "&b左键点击一次购买 &e1 &b个"
+          "&b左键Shift点击一次购买 &e64 &b个"
           "&6价格：&d5.0&a金币&d一个"
+          "&2-&d-&e-&c-&b-&6-&2-&d-&e-&c-&b-&6-&2-&d-&e-&c-&b-&6-"
+          "&d收购"
+          "&b右键点击一次出售 &e1 &b个"
+          "&b右键Shift点击批量出售"
+          "&6价格：&d1.0&a金币&d一个"
         ]
       }
       PrimaryAction {
-        Command = """cost-item:1;
-                       cost: totaleconomy:dollar:-5.0;
+        Command = """cost: totaleconomy:dollar:5.0;
+                       console: give %player_name% minecraft:planks 1 2;
                        sound: minecraft:block.note.hat"""
         CommandAfter = "console: vc update test %player%"
         KeepInventoryOpen = true
       }
       PrimaryShiftAction {
-        Command = """cost-item:64;
-                       cost: totaleconomy:dollar:-320.0;
+        Command = """cost: totaleconomy:dollar:320.0;
+                       console: give %player_name% minecraft:planks 64 2;
                        sound: minecraft:block.note.hat"""
         CommandAfter = "console: vc update test %player%"
         KeepInventoryOpen = true
+      }
+      SecondaryAction {
+        Command = """cost-item:1;
+                       cost: totaleconomy:dollar:-1.0;
+                       sound: minecraft:block.note.hat"""
+        CommandAfter = "console: vc update test %player%"
+        KeepInventoryOpen = true
+        HandheldItem {
+          SearchInventory = true
+          ItemType = "minecraft:planks"
+          Count = 1
+          UnsafeDamage = 2
+        }
+      }
+      SecondaryShiftAction {
+        Command = """cost-item:9;
+                       cost: totaleconomy:dollar:-9.0;
+                       sound: minecraft:block.note.hat"""
+        CommandAfter = "console: vc update test %player%"
+        KeepInventoryOpen = true
+        HandheldItem {
+          RepetitionUpperLimit = 256
+          SearchInventory = true
+          ItemType = "minecraft:planks"
+          Count = 9
+          UnsafeDamage = 2
+        }
       }
     }
   ]
